@@ -33,7 +33,10 @@ CSSLint.addRule({
                 "-o-transform" : "transform",
                 "-ms-transform" : "transform",
                 "-moz-box-sizing" : "box-sizing",
-                "-webkit-box-sizing" : "box-sizing"
+                "-webkit-box-sizing" : "box-sizing",
+                "-moz-user-select" : "user-select",
+                "-khtml-user-select" : "user-select",
+                "-webkit-user-select" : "user-select"                
             };
 
         //event handler for beginning of rules
